@@ -1,5 +1,6 @@
 2003-01-01    John E. Joganic <john@joganic.com>
 
+	* Fixed volito report #99.
 	* Updated volito ranges.
 	* Fixed wacdump refresh
 	* Fixed 2D mouse buttons in xf86Wacom.c
